--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,22 @@
 version: "3"
 
 services:
-  app:
-    build:
-      context: node
-    container_name: app
+  mysql:
+    image: mysql:8.0
+    container_name: mysql
+    command: mysqld --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    restart: always
+    tty: true
+    volumes:
+      - ./mysql:/var/lib/mysql
+    environment:
+      - MYSQL_DATABASE=nodedb
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - 3306:3306
     networks:
       - node_nginx_net
-    volumes:
-      - ./node:/usr/src/app
-    ports:
-      - 3000:3000
-    tty: true
-    depends_on:
-      - mysql
-    environment:
-      - DB_HOST=mysql
-      - DB_PORT=3306
-      - DB_USER=root
-      - DB_PASS=root
-      - DB_NAME=nodedb
 
   nginx:
     container_name: nginx
@@ -34,20 +31,25 @@ services:
     depends_on:
       - mysql
 
-  mysql:
-    image: mysql:8.0
-    container_name: mysql
-    command: mysqld --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
-    restart: always
-    tty: true
+  app:
+    build:
+      context: node
+    container_name: app
+    entrypoint: dockerize -wait tcp://mysql:3306 -timeout 20s docker-entrypoint.sh
     volumes:
-      - ./mysql:/var/lib/mysql
-    environment:
-      - MYSQL_DATABASE=nodedb
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+      - ./node:/usr/src/app
     ports:
-      - 3303:3306
+      - 3000:3000
+    tty: true
+    command: node server.js
+    depends_on:
+      - mysql
+    environment:
+      - DB_HOST=mysql
+      - DB_PORT=3306
+      - DB_USER=root
+      - DB_PASS=root
+      - DB_NAME=nodedb
     networks:
       - node_nginx_net
 
