--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   mysql:
     image: mysql:8.0
     container_name: mysql
-    command: mysqld --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    command: mysqld --default-authentication-plugin=caching_sha2_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     restart: always
     tty: true
     volumes:
@@ -35,13 +35,13 @@ services:
     build:
       context: node
     container_name: app
+    command: bash -c "npm install && node server.js"
     entrypoint: dockerize -wait tcp://mysql:3306 -timeout 20s docker-entrypoint.sh
     volumes:
       - ./node:/usr/src/app
     ports:
       - 3000:3000
     tty: true
-    command: node server.js
     depends_on:
       - mysql
     environment:
@@ -52,6 +52,9 @@ services:
       - DB_NAME=nodedb
     networks:
       - node_nginx_net
+
+volumes:
+  node_modules:
 
 networks:
   node_nginx_net:
